fftw-3, fftw-3-single: Don't arch-check gcc and g95 compilers.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70411 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/fftw-3-single/Portfile
+++ b/dports/math/fftw-3-single/Portfile
@@ -82,6 +82,7 @@ platform powerpc {
 
 variant gcc42 description {create Fortran wrappers using gcc42} conflicts gcc43 gcc44 g95 {
     depends_lib-append    port:gcc42
+    depends_skip_archcheck gcc42
     configure.f77         gfortran-mp-4.2
     configure.args-delete --disable-fortran
     if { ${os.arch} == "i386" } {
@@ -95,6 +96,7 @@ variant gcc42 description {create Fortran wrappers using gcc42} conflicts gcc43 
 
 variant gcc43 description {create Fortran wrappers using gcc43} conflicts gcc42 gcc44 g95 {
     depends_lib-append    port:gcc43
+    depends_skip_archcheck gcc43
     configure.f77         gfortran-mp-4.3
     configure.args-delete --disable-fortran
     if { ${os.arch} == "i386" } {
@@ -108,6 +110,7 @@ variant gcc43 description {create Fortran wrappers using gcc43} conflicts gcc42 
 
 variant gcc44 description {create Fortran wrappers using gcc44} conflicts gcc42 gcc43 g95 {
     depends_lib-append    port:gcc44
+    depends_skip_archcheck gcc44
     configure.f77         gfortran-mp-4.4
     configure.args-delete --disable-fortran
     if { ${os.arch} == "i386" } {
@@ -121,6 +124,7 @@ variant gcc44 description {create Fortran wrappers using gcc44} conflicts gcc42 
 
 variant g95 description {create Fortran wrappers using f95} conflicts gcc42 gcc43 {
     depends_lib-append    port:g95
+    depends_skip_archcheck g95
     configure.f77         g95
     configure.args-delete --disable-fortran
     if { ${os.arch} == "i386" } {
