--- a/dports/devel/ppl/Portfile
+++ b/dports/devel/ppl/Portfile
@@ -1,9 +1,9 @@
 # $Id$
 PortSystem        1.0
 name              ppl
-version           0.10.2
+version           0.11
 categories        devel math
-maintainers       nomaintainer
+maintainers       openmaintainer adfernandes
 platforms         darwin
 description       A modern C++ library providing numerical abstractions
 long_description  The Parma Polyhedra Library (PPL) is a modern C++ library \
@@ -22,9 +22,7 @@ long_description  The Parma Polyhedra Library (PPL) is a modern C++ library \
 homepage          http://www.cs.unipr.it/ppl/
 master_sites      ftp://ftp.cs.unipr.it/pub/ppl/releases/${version}/
 use_bzip2         yes
-checksums         md5     5667111f53150618b0fa522ffc53fc3e \
-                  sha1    9af711df8f24658a6deb61ca3b8c5e82366258bf \
-                  rmd160  432d0e59c058cc1da6cfeaffcb91bebc7b6e1db2
+checksums         sha1    bcba279c2600833876e3002635ab47cacab632d5
 depends_lib       port:gmp port:glpk
 license           GPLv3
 
