ppl: reverting (and fixing) to 10.2 due to cloog-ppl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@70415 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/ppl/Portfile
+++ b/dports/devel/ppl/Portfile
@@ -1,11 +1,20 @@
 # $Id$
 PortSystem        1.0
+
+# Warning: this will one day become part of gcc45+, and thus will use the
+#          (maybe future) 'cloog-ppl' port. As of gcc45, we need to use
+#          cloog-ppl-15.9 which depends on ppl-0.10.2 in a version-
+#          specific manner. You have been warned!
+
 name              ppl
-version           0.11
+version           0.10.2
+
 categories        devel math
-maintainers       openmaintainer adfernandes
+maintainers       adfernandes openmaintainer
 platforms         darwin
+
 description       A modern C++ library providing numerical abstractions
+
 long_description  The Parma Polyhedra Library (PPL) is a modern C++ library \
                   providing numerical abstractions especially targeted at \
                   applications in the field of analysis and verification of \
@@ -19,12 +28,20 @@ long_description  The Parma Polyhedra Library (PPL) is a modern C++ library \
                   also supports finite powersets of (any kind of) polyhedra \
                   and linear programming problems solved with an \
                   exact-arithmetic version of the simplex algorithm.
+
 homepage          http://www.cs.unipr.it/ppl/
 master_sites      ftp://ftp.cs.unipr.it/pub/ppl/releases/${version}/
 use_bzip2         yes
-checksums         sha1    bcba279c2600833876e3002635ab47cacab632d5
+
+checksums         md5     5667111f53150618b0fa522ffc53fc3e \
+                  sha1    9af711df8f24658a6deb61ca3b8c5e82366258bf \
+                  rmd160  432d0e59c058cc1da6cfeaffcb91bebc7b6e1db2
+
 depends_lib       port:gmp port:glpk
+
 license           GPLv3
+
+patchfiles        configure.patch
 
 test.run          yes
 test.target       check
