cloog-ppl: add  to --with-ppl command, remove unneeded polylib dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@70419 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/cloog-ppl/Portfile
+++ b/dports/devel/cloog-ppl/Portfile
@@ -26,11 +26,11 @@ master_sites        ftp://gcc.gnu.org/pub/gcc/infrastructure/
 
 checksums           sha1    08c9458dbccaa3a7522156580f814dc14399febd
 
-depends_lib         port:ppl port:polylib
+depends_lib         port:ppl
 
                     # The 'ppl' port is needed so that 'cloog' can be used with 'gcc45+'. We
                     # don't use a variant since there's no way to guarantee a variant is set.
-configure.args      --with-ppl
+configure.args      --with-ppl=${prefix}
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
