sox: disable universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@70422 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/sox/Portfile
+++ b/dports/audio/sox/Portfile
@@ -30,6 +30,9 @@ depends_lib      port:libao \
                  port:file \
                  port:libpng
 
+# ffmpeg is not universal
+universal_variant no
+
 master_sites     sourceforge
 checksums        md5     b99871c7bbae84feac9d0d1f010331ba \
                  sha1    ef1773e08322ad9d9deb0a9f8e37a7ba4b9ca384 \
