--- a/dports/graphics/pngcrush/Portfile
+++ b/dports/graphics/pngcrush/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                pngcrush
-version             1.7.11
+version             1.7.12
 categories          graphics
 maintainers         snc openmaintainer
 description         optimizer for PNG files
@@ -22,9 +22,8 @@ homepage            http://pmt.sourceforge.net/pngcrush/
 master_sites        sourceforge:pmt
 use_bzip2           yes
 
-checksums           md5     8f033c547a428132fe273e1771b7624e \
-                    sha1    ce65a62e39fdfef38fa71e09e0da18abe0f030e5 \
-                    rmd160  c0dc68afdf5a844a0c5b6f9d7cb8aaf5a17cedf6
+checksums           md5     16d2eab491a13c1bc32d763e3d21e85b \
+                    sha1    7abe2389150ff08a47467085990e7a89044d2a02
 
 use_configure       no
 
