--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100725040501
-set buildhash       g1d2139
+set buildstamp      20100809040503
+set buildhash       g36ecb7
 version             0.7.5
-revision            11
+revision            12
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    e4a8a071ff6560943c4e3c4ea9491b256e73c6bd \
-                    rmd160  0482b0800edea13a7f9ac363d9cf63d414af6863
+checksums           sha1    0610c2011a2d49b31e486a2982f0442beec3a046 \
+                    rmd160  d0ecb5d321f61850dc8ff5926280e36357740bc5
 
 #configure.optflags  -O0
 #configure.cflags-append -g
