--- a/dports/python/py25-webkitgtk/Portfile
+++ b/dports/python/py25-webkitgtk/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            py25-webkitgtk
-version         1.1.7
+version         1.1.8
 categories      python www
 description     Python bindings for thw WebKit GTK+ port
 long_description ${description}
@@ -17,9 +17,8 @@ depends_lib     port:webkit-gtk port:python25 port:py25-gtk port:libffi
 distname        pywebkitgtk-${version}
 master_sites    http://pywebkitgtk.googlecode.com/files/
 
-checksums           md5     4dbe0111c0b0ad2280052e4534903a9b \
-                    sha1    e3416d9455fe7d9947b079c66f40008a01f80055 \
-                    rmd160  c8f1d838d13bee68eb0299adadfbd9d1355c3798
+checksums           md5     158335385354ba38090c9324b37bf225 \
+                    sha1    74ff2222d9aa9af6ab0aa4279b28dd2b26f5824e
 
 livecheck.type  regex
 livecheck.url   ${homepage}
