--- a/dports/python/py-py2app/Portfile
+++ b/dports/python/py-py2app/Portfile
@@ -4,7 +4,7 @@ PortSystem		1.0
 PortGroup		python24 1.0
 
 name			py-py2app
-version			0.4.3
+version			0.5.2
 categories-append	devel
 maintainers		jwa openmaintainer
 description		converts python scripts into executable Mac OS X apps
@@ -19,9 +19,9 @@ homepage		http://undefined.org/python/#py2app
 master_sites		http://cheeseshop.python.org/packages/source/p/py2app/
 distname		py2app-${version}
 
-checksums           md5     45cc8ebc170a41b03a2a4c5feac75b1f \
-                    sha1    71b8b009b47c5d6ca7ee6e47bc733d4c65c453db \
-                    rmd160  877afa2e43ce8203cf74e8fc707c520e0105bf1a
+checksums           md5     d406f75c965410d926b1b9c008096cae \
+                    sha1    b026b9e681d16751dddd41245bfb2e26202a4cbe \
+                    rmd160  cf93edd7bc511f50e97485c9abf4c115deb31854
 
 conflicts       py-py2app-devel
 
@@ -34,7 +34,7 @@ depends_lib-append	port:py-setuptools \
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name} \
 	${destroot}${prefix}/share/examples/${name}
-    xinstall -m 644 -W ${worksrcpath} LICENSE.txt NEWS.txt README.txt \
+    xinstall -m 644 -W ${worksrcpath} LICENSE.txt README.txt \
 	${destroot}${prefix}/share/doc/${name}
     eval file copy [glob ${worksrcpath}/examples/*] \
 	${destroot}${prefix}/share/examples/${name}
