Patch configure to find QCA more robustly; fixes ticket #25715. Install this plugin into default location (inside QT4 plugins). Allow variant for debug, which installs both release and debug plugins.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70437 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca-ossl/Portfile
+++ b/dports/devel/qca-ossl/Portfile
@@ -25,17 +25,26 @@ checksums           md5 bdc62c01321385c7da8d27b3902910ce \
                     sha1 dd925e8732ff76f24f9f90f4094abaf2f0ac27bf \
                     rmd160 c979c3c3427eb45e8866e28746f83966e8bcf3c2
 
+depends_build       port:pkgconfig
 depends_lib         port:qca \
                     port:openssl
 
-# Without the patch, if MD2 isn't part of OpenSSL (which it is not by
-# default) then compiling will error out.  Upstream has already fixed
-# this issue; just waiting for a new release here.
-patchfiles          patch-qca-ossl.cpp.diff
+# Without the patch to "qca-ossl.cpp", if MD2 isn't part of OpenSSL
+# (which it is not by default as of at least version 0.9.7) then
+# compiling will error out.  Upstream has already fixed this issue for
+# this port; just waiting for a new release.  The patch to "configure"
+# uses QCA's 'crypto.prf' file to correctly include its libraries (no
+# matter how QCA is installed), instead of forcing patching of
+# multiple files.
+patchfiles          patch-qca-ossl.cpp.diff \
+                    patch-configure.diff
 
 set qt_dir         ${prefix}/libexec/qt4-mac
 
-configure.pre_args  --qtdir=${qt_dir} --with-qca=${prefix}
+# qca-ossl does not use --prefix
+configure.pre_args
+configure.args       --verbose             \
+                     --qtdir=${qt_dir}
 
 destroot.destdir    INSTALL_ROOT="${destroot}"
 
@@ -45,6 +54,13 @@ post-destroot {
                          sed -e "s@${destroot}@@g"] {
         system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
     }
+}
+
+variant debug description \
+{Build both release and debug library} \
+{
+    configure.args-delete --release
+    configure.args-append --debug-and-release
 }
 
 variant universal {
