--- a/dports/devel/qca-gnupg/Portfile
+++ b/dports/devel/qca-gnupg/Portfile
@@ -1,10 +1,11 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 name                qca-gnupg
-version             2.0.0-beta2
+version             2.0.0-beta3
 categories          devel crypto security
-maintainers         rowue openmaintainer
+maintainers         michaelld openmaintainer
 description         Qt Cryptographic Architecture - gnupg plugin
 long_description \
     This library provides an easy API for the following features: SSL/TLS, \
@@ -19,23 +20,47 @@ homepage            http://delta.affinix.com/qca/
 master_sites        http://delta.affinix.com/download/qca/2.0/plugins/
 use_bzip2           yes
 
-checksums           md5 491f8acb97e9943cb1c8822000516ed6 \
-                    sha1 d7b7834132f40c73ad6bf589951949b878868906 \
-                    rmd160 c28d37a5d045e3f5e2102b1b98d422b4d8d7b310
+checksums           md5 9b4d020efd835a52d98b2ced9ae79c4b \
+                    sha1 77e3874b9ed427e281b23b9bf41ecc95e74f7053 \
+                    rmd160 2531d81179e0b78cc3689c7891b4c6c60d56a422
 
 depends_lib         port:qca
+depends_run         port:gnupg
 
-configure.pre_args  --qtdir=${prefix}
+# The patch to "configure" uses QCA's 'crypto.prf' file to correctly
+# include its libraries (no matter how QCA is installed), instead of
+# forcing patching of multiple files.
+patchfiles          patch-configure.diff
 
-post-build {
-    system "install_name_tool -id ${prefix}/lib/libqca-gnupg.dylib \
-        ${worksrcpath}/lib/libqca-gnupg.dylib"
+set qt_dir         ${prefix}/libexec/qt4-mac
+
+# qca-gnupg does not use --prefix
+configure.pre_args
+configure.args       --verbose             \
+                     --qtdir=${qt_dir}
+
+destroot.destdir    INSTALL_ROOT="${destroot}"
+
+post-destroot {
+    # fix library path of installed library/ies
+    foreach fixfile [exec find ${destroot}${qt_dir} -name "*.dylib" | \
+                         sed -e "s@${destroot}@@g"] {
+        system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
+    }
 }
 
-destroot {
-    xinstall -m 755 -d ${destroot}${prefix}/lib/qt4-plugins/crypto
-        
-    xinstall -m 644 -W ${worksrcpath}/lib libqca-gnupg.dylib \
-                ${destroot}${prefix}/lib/qt4-plugins/crypto
+variant debug description \
+{Build both release and debug library} \
+{
+    configure.args-delete --release
+    configure.args-append --debug-and-release
 }
 
+variant universal {
+    configure.universal_args-append --universal
+}
+
+variant gnupg2 description {GnuPG version 2 runtime use} {
+	depends_run-delete port:gnupg
+	depends_run-append port:gnupg2
+}
