Patch configure to find QCA more robustly. Install this plugin into default location (inside QT4 plugins). Allow variant for debug, which installs both release and debug plugins.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70439 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca-cyrus-sasl/Portfile
+++ b/dports/devel/qca-cyrus-sasl/Portfile
@@ -5,8 +5,9 @@ PortSystem          1.0
 
 name                qca-cyrus-sasl
 version             2.0.0-beta3
+revision            1
 categories          devel crypto security
-maintainers         rowue openmaintainer
+maintainers         michaelld openmaintainer
 description         Qt Cryptographic Architecture - cyrus-sasl plugin
 long_description \
     This library provides an easy API for the following features: SSL/TLS, \
@@ -28,17 +29,36 @@ checksums           md5 db51df751478f60416659809e11990fd \
 depends_lib         port:qca \
                     port:cyrus-sasl2
 
-configure.pre_args  --with-sasl-inc=${prefix}/include/
+# The patch to "configure" uses QCA's 'crypto.prf' file to correctly
+# include its libraries (no matter how QCA is installed), instead of
+# forcing patching of multiple files.
+patchfiles          patch-configure.diff
 
-post-build {
-    system "install_name_tool -id ${prefix}/lib/libqca-cyrus-sasl.dylib \
-        ${worksrcpath}/lib/libqca-cyrus-sasl.dylib"
+set qt_dir          ${prefix}/libexec/qt4-mac
+
+# qca-gnupg does not use --prefix
+configure.pre_args
+configure.args       --verbose             \
+                     --qtdir=${qt_dir}     \
+                     --with-sasl-inc=${prefix}/include
+
+destroot.destdir     INSTALL_ROOT="${destroot}"
+
+post-destroot {
+    # fix library path of installed library/ies
+    foreach fixfile [exec find ${destroot}${qt_dir} -name "*.dylib" | \
+                         sed -e "s@${destroot}@@g"] {
+        system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
+    }
 }
 
-destroot {
-    xinstall -m 755 -d ${destroot}${prefix}/lib/qt4-plugins/crypto
-        
-    xinstall -m 644 -W ${worksrcpath}/lib libqca-cyrus-sasl.dylib \
-                ${destroot}${prefix}/lib/qt4-plugins/crypto
+variant debug description \
+{Build both release and debug library} \
+{
+    configure.args-delete --release
+    configure.args-append --debug-and-release
 }
 
+variant universal {
+    configure.universal_args-append --universal
+}
