--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name                qscintilla
-version             2.4.3
+version             2.4.4
 categories          devel
 maintainers         adfernandes openmaintainer
 description         QScintilla is a port to Qt of Neil Hodgson's Scintilla C++ editor control.
@@ -32,7 +33,9 @@ master_sites        http://www.riverbankcomputing.com/static/Downloads/QScintill
                     http://www.gtlib.gatech.edu/pub/gentoo/distfiles/ \
                     http://gentoo.osuosl.org/distfiles/
 
-checksums           sha1    772bb3cfca8716e035f2cdc4536d5d8025b855a8
+checksums           md5    db5f21723ea976ddd78c4c3662a21f9c \
+                    sha1   4b6ecb8090a546b14fa4c0ce86ff2c7e97261005 \
+                    rmd160 e56cc02f7b69316cd943705fba9159fa9272aa21
 
 depends_lib         port:qt4-mac
 
