Fix for new QCA install location.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70441 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdegraphics4/Portfile
+++ b/dports/kde/kdegraphics4/Portfile
@@ -29,9 +29,11 @@ patch.dir           ${workpath}/${distname}
 patchfiles          patch-gwenview-lib-document-view-videoviewadapter.cpp.patch \
                     patch-okular-core-audioplayer.cpp.patch
 
+set qca_dir         ${prefix}/libexec/qt4-mac
+
 configure.args-append   ../${distname} \
-                        -DQCA2_LIBRARIES=${prefix}/lib/libqca.2.dylib \
-                        -DQCA2_INCLUDE_DIR=${prefix}/include/QtCrypto \
+                        -DQCA2_LIBRARIES=${qca_dir}/lib/libqca.2.dylib \
+                        -DQCA2_INCLUDE_DIR=${qca_dir}/include/QtCrypto \
                         -DGWENVIEW_SEMANTICINFO_BACKEND=None
 
 variant gphoto2 description {Required to build the kamera project} {
