Fix for new QCA install location.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70442 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdenetwork4/Portfile
+++ b/dports/kde/kdenetwork4/Portfile
@@ -6,6 +6,7 @@ PortGroup           kde4   1.0
 
 name                kdenetwork4
 version             4.4.5
+revision            1
 categories          kde kde4 network
 maintainers         snc sharky
 description         KDE4 networking applications
@@ -28,9 +29,11 @@ depends_lib-append  port:kdebase4-runtime \
                     port:libotr
 depends_run-append  port:qca-ossl
 
+set qca_dir         ${prefix}/libexec/qt4-mac
+
 configure.args-append   ../${distname} \
-                        -DQCA2_LIBRARIES=${prefix}/lib/libqca.2.dylib \
-                        -DQCA2_INCLUDE_DIR=${prefix}/include/QtCrypto
+                        -DQCA2_LIBRARIES=${qca_dir}/lib/libqca.2.dylib \
+                        -DQCA2_INCLUDE_DIR=${qca_dir}/include/QtCrypto
 
 variant no_kopete conflicts libmsn xmms description "Do not install Kopete instant messaging client" {
     depends_lib-delete      port:qca \
