--- a/dports/kde/ktorrent/Portfile
+++ b/dports/kde/ktorrent/Portfile
@@ -1,10 +1,11 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 PortGroup           kde4    1.0
 
 name                ktorrent
-version             3.2
+version             3.3.4
 categories          kde kde4
 maintainers         nomaintainer
 description         KDE4 bittorrent client.
@@ -14,14 +15,17 @@ platforms           darwin
 homepage            http://www.kde.org
 master_sites	    http://ktorrent.org/downloads/${version}/
 use_bzip2           yes
-checksums           md5     e215de7a711b3f9c33044bf97a6d8bfb \
-                    sha1    7cc7c50f8860ef31aca3c93f65eee131cc84c968 \
-                    rmd160  e04cf261b22f191f6bda4bccb8b56fdcd734b944
+checksums           md5     7d7dba06a78d09494199bd4ef82e5527 \
+                    sha1    732527854f734d5fcd038348273378d0b1f8158f \
+                    rmd160  93ae20f720e159ec53c4d1325c74fef0ec953db4
 
-depends_lib-append  port:kdebase4-runtime \
+depends_lib-append  port:kdebase4-runtime port:kdepimlibs4 \
                     port:qca port:gmp
 
-configure.args-append	../${distname} \
-		-DQCA2_LIBRARIES=${prefix}/lib/libqca.2.dylib \
-		-DQCA2_INCLUDE_DIR=${prefix}/include/QtCrypto 
+depends_build-append bin:perl:perl5
 
+set qca_dir          ${prefix}/libexec/qt4-mac
+
+configure.args-append	../${distname} \
+		-DQCA2_LIBRARIES=${qca_dir}/lib/libqca.2.dylib \
+		-DQCA2_INCLUDE_DIR=${qca_dir}/include/QtCrypto 
