sounddecompress: fix formatting of notes for MacPorts 1.9+
git-svn-id: https://svn.macports.org/repository/macports/trunk@70447 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/sounddecompress/Portfile
+++ b/dports/games/sounddecompress/Portfile
@@ -20,11 +20,12 @@ long_description            SoundDecompress is a utility to decompress sounds \
                             sounds get decompressed incorrectly, resulting in \
                             silence or static. Run this tool to fix the sounds.
 
-notes                       To have SoundDecompress decompress the sounds in \
-                            a Myst Online: URU Live installation installed by \
-                            the mystonline-cider or mystonline-wine ports, run \
-                            \n\
-                            \nsounddecompress.py -u ${prefix}/share/mystonline/data
+notes "
+To have SoundDecompress decompress the sounds in a Myst Online: URU Live\
+installation installed by the mystonline-cider or mystonline-wine ports, run:
+
+sounddecompress.py -u ${prefix}/share/mystonline/data
+"
 
 distname                    ${name}_v[strsed ${version} {g/\.//}]
 use_bzip2                   yes
