fixed line length bug
git-svn-id: https://svn.macports.org/repository/macports/trunk@70452 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb19-rainbow/Portfile
+++ b/dports/ruby/rb19-rainbow/Portfile
@@ -2,8 +2,8 @@ PortSystem          1.0
 PortGroup           ruby 1.0
 
 ruby.setup          rainbow 1.1 gem {} rubygems ruby19
-description         Rainbow extends ruby String class adding methods to wrap \
-  the string with "ANSI escape codes
+description         Rainbow extends ruby String class adding methods to \
+  wrap the string with "ANSI escape codes
 long_description    \
     ${description}
 license             MIT
