--- a/dports/ruby/rb19-rainbow/Portfile
+++ b/dports/ruby/rb19-rainbow/Portfile
@@ -5,7 +5,7 @@ PortGroup           ruby 1.0
 
 ruby.setup          rainbow 1.1 gem {} rubygems ruby19
 description         Rainbow extends ruby String class adding methods to \
-  wrap the string with "ANSI escape codes
+  wrap the string with ANSI escape codes
 long_description    \
     ${description}
 license             MIT
@@ -16,4 +16,4 @@ checksums           md5     3153d4db94ea0a2c3414c43742f88465 \
                     sha1    145653d2de28ded1b8e8403175959f5fc80e4971 \
                     rmd160  675559e824a0528b6f6af678250dd7f433df051c
 
-depends_lib  port:rb19-ruby
+depends_lib  port:ruby19
