texlive metaport: add name and description of scheme variant in notes and in README file in $prefix/share/doc/texlive
git-svn-id: https://svn.macports.org/repository/macports/trunk@70455 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/texlive/Portfile
+++ b/dports/tex/texlive/Portfile
@@ -6,7 +6,7 @@ PortGroup       texlive 1.0
 
 name            texlive
 version         2009
-revision        2
+revision        3
 
 categories      tex
 maintainers     dports
@@ -29,33 +29,58 @@ distfiles
 use_configure   no
 build           {}
 
-destroot        {
+set scheme ""
+set scheme_desc ""
+
+proc add_notes {} {
+    global scheme scheme_desc
+    
+    notes "The \"${scheme}\" installation of TeX Live was selected. ${scheme_desc}\n"
+    
+    if {$scheme != "full"} {
+        notes-append " \n"
+        notes-append "Additional TeX Live packages are available. To see a list, use 'port list texlive-* and not installed'. If you want a full installation (very large), reinstall this metaport with the +full variant."
+    }
+}
+destroot {
     # Create a dummy file so the port can be successfully activated
     xinstall -d ${destroot}${prefix}/share/doc/texlive
     set docfile [open ${destroot}${prefix}/share/doc/texlive/README.${name}.txt "w"]
-    puts $docfile "TeX Live ${version} (MacPorts revision ${version}_${revision})"
-    puts $docfile "\n${long_description}"
-    puts $docfile "\nThe other files in this directory list the versions and "
-    puts $docfile "contents of each TeX Live port installed."
+    puts $docfile "TeX Live ${version} (MacPorts revision ${version}_${revision})\n"
+    puts $docfile "${long_description}\n"
+    puts $docfile "\nThe \"${scheme}\" scheme was installed. ${scheme_desc}\n"
+    puts $docfile "The other files in this directory list the versions and contents of each TeX Live port installed."
     close $docfile
 }
 
 variant minimal \
     description "Minimal installation scheme (plain TeX only; no LaTeX)" \
     conflicts basic medium full {
+        set scheme "minimal"
+        set scheme_desc "This installation provides the bare minimum support for plain TeX; it does not include LaTeX or any add-on packages."
+        add_notes
+
         depends_lib port:texlive-basic
     }
 
 variant basic \
     description "Basic installation scheme for plain TeX or LaTeX documents" \
     conflicts minimal medium full {
+        set scheme "basic"
+        set scheme_desc "This installation provides support for plain TeX and LaTeX, but no add-on packages."
+        add_notes
+
         depends_lib port:texlive-basic \
-                    port:texlive-latex
+            port:texlive-latex
     }
 
 variant medium \
     description "Medium installation scheme: plain, latex, recommended packages, some languages" \
     conflicts minimal basic full {
+        set scheme "medium"
+        set scheme_desc "This is the standard installation containing basic and recommended packages for TeX, LaTeX, and ConTeXt, as well as support files for several common European languages."
+        add_notes
+        
         depends_lib port:texlive-basic \
                     port:texlive-bin-extra \
                     port:texlive-context \
@@ -87,6 +112,10 @@ variant medium \
 variant full \
     description "Full installation scheme (very large!)" \
     conflicts minimal basic medium {
+        set scheme "full"
+        set scheme_desc "This is a full installation of all TeX Live packages, including all languages and their associated documentation."
+        add_notes
+
         depends_lib port:texlive-basic \
                     port:texlive-bibtex-extra \
                     port:texlive-bin-extra \
