exiftags: support universal and non-default-build_arch builds
git-svn-id: https://svn.macports.org/repository/macports/trunk@70456 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/exiftags/Portfile
+++ b/dports/graphics/exiftags/Portfile
@@ -3,6 +3,7 @@
 PortSystem	1.0
 name		exiftags
 version		1.01
+revision	1
 categories	graphics
 maintainers	nomaintainer
 description	Utility spits out Exif tags from a digital camera JPEG file
@@ -25,6 +26,15 @@ checksums       md5     9d5bce968fdde2dc24ba49c0024dc0cc \
                 rmd160  59549c222469cdc55bb74452e4cd458d5b545684
 
 use_configure	no
+
+variant universal {}
+if {[variant_isset universal]} {
+	set archflags ${configure.universal_ldflags}
+} else {
+	set archflags ${configure.cc_archflags}
+}
+build.args	CC="${configure.cc} ${archflags}"
+
 destroot {
     xinstall -W ${worksrcpath} exiftags exifcom exiftime ${destroot}${prefix}/bin
     xinstall -m 644 -W ${worksrcpath} exiftags.1 exifcom.1 exiftime.1 ${destroot}${prefix}/share/man/man1
