math/qrupdate: Rename +accelerate to the more common name +no_atlas
git-svn-id: https://svn.macports.org/repository/macports/trunk@70460 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/qrupdate/Portfile
+++ b/dports/math/qrupdate/Portfile
@@ -6,7 +6,7 @@ PortGroup           muniversal 1.0
 
 name                qrupdate
 version             1.1.1
-revision            2
+revision            3
 categories          math
 maintainers         nomaintainer
 description         library for fast updates of QR and Cholesky decompositions
@@ -20,7 +20,7 @@ checksums           md5     7782c7ee6c234e56a72d6b86c1856fa0 \
                     sha1    8fbaba202b0d4bf80852b2dc6c8d1d4b90b816d4 \
                     rmd160  fd63306abe91adcd5d47e408d9cd4af3e1b32b0c
 
-depends_lib-append  port:atlas
+depends_lib         port:atlas
 
 use_configure       no
 build.target        lib solib
@@ -64,12 +64,14 @@ post-configure {
     }
 }
 
-variant accelerate description {build with Accelerate framework} {
+variant no_atlas description {build with Accelerate framework instead of atlas} {
     depends_lib-delete      port:atlas
     build.args          PREFIX=${prefix} BLAS="-framework Accelerate" LAPACK="-framework Accelerate"
     destroot.args       PREFIX=${prefix} BLAS="-framework Accelerate" LAPACK="-framework Accelerate"
     test.args           PREFIX=${prefix} BLAS="-framework Accelerate" LAPACK="-framework Accelerate"
 }
+
+variant accelerate requires no_atlas description {compatibility variant} {}
 
 variant g95 conflicts gcc43 gcc44 universal description {build with g95} {
     depends_build-append    port:g95
