--- a/dports/security/cyrus-sasl2/Portfile
+++ b/dports/security/cyrus-sasl2/Portfile
@@ -19,7 +19,8 @@ long_description	SASL is the Simple Authentication and Security Layer, \
 			between the protocol and the connection.
 platforms		darwin
 homepage		http://asg.web.cmu.edu/sasl/
-master_sites		ftp://ftp.andrew.cmu.edu/pub/cyrus-mail
+master_sites		http://ftp.andrew.cmu.edu/pub/cyrus-mail/ \
+			ftp://ftp.andrew.cmu.edu/pub/cyrus-mail/
 distname		cyrus-sasl-${version}
 checksums		md5 2eb0e48106f0e9cd8001e654f267ecbc \
 			sha1 5df33a6788d6cd8329b109eff777c6cfae1a21bd \
