ruby/rb-hoe: upgrade to 2.6.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@70465 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-hoe/Portfile
+++ b/dports/ruby/rb-hoe/Portfile
@@ -3,16 +3,17 @@
 PortSystem 1.0
 PortGroup			ruby 1.0
 
-ruby.setup			hoe 1.7.0 gem {} rubyforge_gem:seattlerb
+ruby.setup			hoe 2.6.1 gem {} rubyforge_gem:seattlerb
 maintainers			nomaintainer
 description			Hoe is a way to write Rakefiles much easier and cleaner.
 long_description	Hoe is a simple rake/rubygems helper for project \
 					Rakefiles. It generates all the usual tasks for projects \
 					including rdoc generation, testing, packaging, and \
 					deployment.
-checksums			md5 52893edef97db9d5d39fbcaf8e49b571 \
-					sha1 50375588517a94962c59566f79a1301d95eb459a \
-					rmd160 7b00576d800162a8e25b0404e9ceab4bbeec3a04
+license				MIT
+checksums			md5 658cea3f4151ab493fb6a2063cdf470d \
+					sha1 a2c68947857059fdb9a120b15ab61fb6cab5dd2b \
+					rmd160 d99f5973f5f83bcb58bb2824d18e97ea8e4ef1fa
 platforms           darwin
 
 depends_lib-append \
