devel/bzr-gtk: Add patch to mark compatible with bzr 2.2.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@70468 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bzr-gtk/Portfile
+++ b/dports/devel/bzr-gtk/Portfile
@@ -5,6 +5,7 @@ PortGroup     python26 1.0
 
 name          bzr-gtk
 version       0.98.0
+revision      1
 set branch    [join [lrange [split ${version} .] 0 1] .]
 categories    devel python
 platforms     darwin
@@ -23,6 +24,8 @@ checksums     md5     a14ac163a88beb38106f6610a6441529 \
 
 depends_lib-append  port:bzr \
                     port:py26-gtk
+
+patchfiles    patch-bzr-2.2.0.diff
 
 universal_variant no
 
